# src/main/java/com/notabusiness/app/controller/UserController.java
@@ -2,30 +2,35 @@ package com.notabusiness.app.controller;
 
 import com.notabusiness.app.entity.Users;
 import com.notabusiness.app.exception.ApplicationException;
+import com.notabusiness.app.gigzal.generated.controller.AuthenticationApi;
+import com.notabusiness.app.gigzal.generated.model.LoginResponse;
 import com.notabusiness.app.service.UserService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 @RequiredArgsConstructor
-public class UserController {
+public class UserController implements AuthenticationApi {
 
     private final UserService userService;
 
     @PostMapping("/register")
     public Users register(@RequestBody Users user) {
-        if(user.getUsername()==null) {
-            throw new ApplicationException("error code","username is null", HttpStatus.BAD_REQUEST);
+        if (user.getUsername() == null) {
+            throw new ApplicationException("error code", "username is null", HttpStatus.BAD_REQUEST);
         }
         return userService.register(user);
     }
 
+    @Override
     @PostMapping("/login")
-    public String login(@RequestBody Users user) {
-        return userService.verify(user);
+    public ResponseEntity<LoginResponse> login(@RequestParam String username, @RequestParam String password) {
+        return new ResponseEntity<>(userService.verify(username, password), HttpStatus.OK);
     }
 
 }
